# Currently, this directory doesn't contain any source files
# This CMakeLists.txt file is included to ensure the directory is properly recognized by the build system

# If you add source files to this directory, uncomment and modify the following lines

# add_library(messages OBJECT
#     # Add your source files here
# )

# target_include_directories(messages PUBLIC
#     ${CMAKE_CURRENT_SOURCE_DIR}
#     ${NS3_DIR}/build/include
#     ${VANETZA_DIR}/build/include
# )

# target_compile_options(messages PRIVATE -Wall -Wextra)