# Currently, this directory contains only header files
# This CMakeLists.txt file is included to ensure the directory is properly recognized by the build system

# If you add source files to this directory, uncomment and modify the following lines

# add_library(utils OBJECT
#     # Add your source files here
# )

# target_include_directories(utils PUBLIC
#     ${CMAKE_CURRENT_SOURCE_DIR}
#     ${NS3_DIR}/build/include
#     ${VANETZA_DIR}/build/include
# )

# target_compile_options(utils PRIVATE -Wall -Wextra)